--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "normalize.css": "^7.0.0",
     "react": "15.3.0",
     "react-dom": "15.3.0",
+    "react-redux": "^5.0.6",
     "react-router": "2.6.1",
     "react-router-dom": "^4.2.2",
     "react-tooltip": "3.1.5",
+    "redux": "^3.7.2",
     "styled-components": "^2.2.1"
   },
   "devDependencies": {
