--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "dependencies": {
     "axios": "0.13.1",
     "bootstrap": "^3.3.5",
+    "highcharts": "^6.0.1",
     "history": "^3.0.0",
     "moment": "^2.10.6",
     "normalize.css": "^7.0.0",
     "react": "15.3.0",
     "react-dom": "15.3.0",
+    "react-highcharts": "^13.0.0",
     "react-router": "2.6.1",
     "react-router-dom": "^4.2.2",
     "react-tooltip": "3.1.5",
