--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "React implementation of the http://etheroscope.alice.si",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --content-base ./ --env.dev",
+    "dev": "webpack-dev-server --host 0.0.0.0 --port 8080 --inline --content-base ./ --env.dev",
     "build": "webpack --env.prod",
     "test": "cross-env NODE_ENV=test nyc mocha",
     "watch:test": "mocha --watch --compilers js:babel-register",
     "start": "http-server",
     "vm-start": "forever start",
+    "clean": "npm prune && npm dedupe",
     "setup": "npm install"
   },
   "repository": {
@@ -34,7 +35,8 @@
     "react-router": "2.6.1",
     "react-router-dom": "^4.2.2",
     "react-tooltip": "3.1.5",
-    "styled-components": "^2.2.1"
+    "styled-components": "^2.2.1",
+    "webpacker": "0.0.3"
   },
   "devDependencies": {
     "babel-core": "6.13.2",
