--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "http-server": "0.9.0",
     "jsdom": "9.4.1",
     "lodash": "4.14.2",
+    "node-sass": "^4.5.3",
     "npm-run-all": "2.3.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.0",
-    "webpack": "2.1.0-beta.20",
-    "webpack-config-utils": "2.0.0",
-    "webpack-dev-server": "2.1.0-beta.0",
-    "webpack-validator": "2.2.7"
+    "webpack": "^3.8.1",
+    "webpack-config-utils": "^2.3.0",
+    "webpack-dev-server": "^2.9.2"
   },
   "nyc": {
     "all": true,
