--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ install:
 script:
 - ./travis-test.sh
 before_deploy:
-- openssl aes-256-cbc -K $super_secret_password -iv $super_secret_password_iv -in deploy_rsa.enc
-  -out /tmp/deploy_rsa -d
+- openssl aes-256-cbc -K $encrypted_da743b78d4e1_key -iv $encrypted_da743b78d4e1_iv openssl aes-256-cbc -K $encrypted_da743b78d4e1_key -iv $encrypted_da743b78d4e1_iv -in deploy_rsa.enc -out deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
