--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,7 @@ install:
 script:
 - ./travis-test.sh
 before_deploy:
-- openssl aes-256-cbc -K $encrypted_da743b78d4e1_key -iv $encrypted_da743b78d4e1_iv
-  -in deploy_rsa.enc -out /tmp/deploy_rsa -d
-- eval "$(ssh-agent -s)"
-- chmod 600 /tmp/deploy_rsa
-- sudo ssh-add /tmp/deploy_rsa
+- ./travis-before-deploy.sh
 deploy:
 - provider: script
   script: ./travis-deploy.sh
