--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ script:
 - ./travis-test.sh
 before_deploy:
 - ./travis-before-deploy.sh
+- openssl aes-256-cbc -K $encrypted_da743b78d4e1_key -iv $encrypted_da743b78d4e1_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- echo "Adding SSH private key"
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- sudo ssh-add /tmp/deploy_rsa
 deploy:
   skip_cleanup: true
   provider: script
