--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-router": "2.6.1",
     "react-router-dom": "^4.2.2",
     "react-tooltip": "3.1.5",
-    "styled-components": "^2.2.1"
+    "styled-components": "^2.2.1",
+    "futurize": "^1.2.0",
+    "es6-promise": "^4.1.0"
   },
   "devDependencies": {
     "babel-core": "6.13.2",
