--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "history": "^3.0.0",
     "moment": "^2.10.6",
     "normalize.css": "^7.0.0",
-    "react": "15.3.0",
-    "react-dom": "15.3.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-fa": "^5.0.0",
     "react-highcharts": "^13.0.0",
     "react-router": "2.6.1",
     "react-router-dom": "^4.2.2",
@@ -41,7 +42,7 @@
   },
   "devDependencies": {
     "babel-core": "6.13.2",
-    "babel-loader": "6.2.4",
+    "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "1.0.3",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
