--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "React implementation of the http://etheroscope.alice.si",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --host 0.0.0.0 --port 8080 --inline --content-base ./ --env.dev",
-    "build": "webpack --env.prod",
-    "test": "cross-env NODE_ENV=test nyc mocha",
+    "dev": "webpack-dev-server --env.NODE_ENV=development",
+    "build": "webpack",
+    "test": "cross-env NODE_ENV=testing nyc mocha",
     "watch:test": "mocha --watch --compilers js:babel-register",
-    "start": "http-server",
+    "start": "npm run dev",
     "vm-start": "forever start node_modules/http-server/bin/http-server",
     "clean": "npm prune && npm dedupe",
     "setup": "npm install"
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "babel-core": "6.13.2",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "1.0.3",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
@@ -58,10 +58,10 @@
     "lodash": "4.14.2",
     "npm-run-all": "2.3.0",
     "style-loader": "^0.13.0",
-    "webpack": "2.1.0-beta.20",
-    "webpack-config-utils": "2.0.0",
-    "webpack-dev-server": "2.1.0-beta.0",
-    "webpack-validator": "2.2.7"
+    "webpack": "^3.8.1",
+    "webpack-config-utils": "^2.3.0",
+    "webpack-dev-server": "^2.9.2",
+    "webpack-merge": "^4.1.1"
   },
   "nyc": {
     "all": true,
