--- a/package.json
+++ b/package.json
@@ -24,23 +24,6 @@
   },
   "homepage": "https://github.com/Etheroscope/frontend-react",
   "dependencies": {
-    "axios": "0.13.1",
-    "bootstrap": "^3.3.5",
-    "forever": "^0.15.3",
-    "history": "^3.0.0",
-    "moment": "^2.19.2",
-    "normalize.css": "^7.0.0",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-fa": "^5.0.0",
-    "react-highcharts": "^13.0.0",
-    "react-router": "2.6.1",
-    "react-router-dom": "^4.2.2",
-    "react-tooltip": "3.1.5",
-    "styled-components": "^2.2.3",
-    "webpacker": "0.0.3"
-  },
-  "devDependencies": {
     "babel-core": "6.13.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "1.0.3",
@@ -48,20 +31,28 @@
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-2": "6.13.0",
     "babel-register": "6.11.6",
-    "cross-env": "2.0.0",
     "css-loader": "0.23.1",
-    "eslint": "3.2.2",
-    "eslint-config-kentcdodds": "^9.0.2",
     "file-loader": "0.9.0",
+    "forever": "^0.15.3",
     "http-server": "0.9.0",
-    "jsdom": "9.4.1",
-    "lodash": "4.14.2",
-    "npm-run-all": "2.3.0",
+    "normalize.css": "^7.0.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-fa": "^5.0.0",
+    "react-highcharts": "^13.0.0",
+    "react-router": "2.6.1",
     "style-loader": "^0.13.0",
+    "styled-components": "^2.2.3",
     "webpack": "^3.8.1",
-    "webpack-config-utils": "^2.3.0",
     "webpack-dev-server": "^2.9.2",
     "webpack-merge": "^4.1.1"
+  },
+  "devDependencies": {
+    "cross-env": "2.0.0",
+    "eslint": "3.2.2",
+    "eslint-config-kentcdodds": "^9.0.2",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0"
   },
   "nyc": {
     "all": true,
