--- a/ansible-additions/playbook.yml
+++ b/ansible-additions/playbook.yml
@@ -1,7 +1,6 @@
 ---
 - name: Deploy application
   hosts: all
-  sudo: yes
   vars_files:
     - ["vars/default.yml"]
   roles:
@@ -12,45 +11,33 @@
   tasks:
     - name: Install global npm packages
       npm: name={{ item }} global=yes
-      sudo: yes
       become: True
       with_items:
       - n
       - forever
       
     - name: Make app dir
-      sudo: no
       shell: mkdir -p {{ deploy_app_dir }}
       changed_when: False
-      become: True
-      
+
     - name: Pull sources from the repository.
-      sudo: no
       git: repo={{ repo_url }}
            ssh_opts="-o StrictHostKeyChecking=no"
            dest={{ deploy_app_dir }}
            version={{ repo_version }}
            force=True
-      become: True
       force: True
       
-    - name: install npm packages for root
-      sudo: no
+    - name: install npm packages
       shell: chdir={{ deploy_app_dir }} npm run setup
-      become: True
-      
+
     - name: build app
-      sudo: no
       shell: chdir={{ deploy_app_dir }} npm run build
-      become: True
-      
+
     - name: Start node 
       shell: chdir={{deploy_app_dir}} forever stopall; npm run vm-start 
-      sudo: yes
-      become: True
-      
+
     - name: copy nginx virtual host file
-      sudo: yes
       template: src="{{ inventory_dir }}/templates/nginx.j2"
                 dest="/etc/nginx/sites-available/{{app_name}}"
                 owner=root
@@ -58,13 +45,11 @@
       become: True
       
     - name: link nginx virtual host file
-      sudo: yes
       file: src="/etc/nginx/sites-available/{{app_name}}"
             dest="/etc/nginx/sites-enabled/{{app_name}}"
             state=link
       become: True
       
     - name: restart nginx
-      sudo: yes
       service: name=nginx state=restarted
       become: True
