--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "forever": "^0.15.3",
     "http-server": "0.9.0",
     "normalize.css": "^7.0.0",
+    "ramda": "^0.25.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-fa": "^5.0.0",
