--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "http-server": "0.9.0",
     "normalize.css": "^7.0.0",
     "react": "^15.6.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^15.6.2",
     "react-fa": "^5.0.0",
     "react-highcharts": "^13.0.0",
