--- a/package.json
+++ b/package.json
@@ -39,10 +39,14 @@
     "ramda": "^0.25.0",
     "react": "^15.6.2",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-delay": "^0.1.0",
+    "react-delay-render": "^0.1.1",
     "react-dom": "^15.6.2",
     "react-fa": "^5.0.0",
     "react-highcharts": "^13.0.0",
+    "react-modal": "^3.1.6",
     "react-router": "2.6.1",
+    "react-validation": "^3.0.7",
     "style-loader": "^0.13.0",
     "styled-components": "^2.2.3",
     "webpack": "^3.8.1",
